--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,6 @@
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Nunito");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900");
 
 // Variables
 @import "variables";
@@ -9,11 +10,10 @@
 
 .navbar-laravel {
     background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
 * {
-    font-family: "Raleway", sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 // hide ugly scrollbar
 ::-webkit-scrollbar {
